# berbl-exp

./: .gitmodules  README.md  flake.nix  init.sh  setup.cfg  shell.nix
configs/: sine.toml
scripts/: run.py  shelp.py  submit.py
slurm/: runexp.py  runps.py
src/: eval-ps.py  eval.py  run.py
src/eval/: __init__.py  xcsf_parameter_search_generated_function.py
src/evaluation/: __init__.py  xcsf_parameter_search_generated_function.py
src/experiments/: __init__.py  berbl.py  utils.py  xcsf.py
tasks/gecco-2022/: berbl-additional_literal-generated_function-0.npz  berbl-additional_literal-generated_function-1.npz  berbl-additional_literal-generated_function-2.npz  berbl-additional_literal-generated_function-3.npz  berbl-additional_literal-generated_function-4.npz  berbl-additional_literal-sparse_noisy_data-0.npz  berbl-additional_literal-sparse_noisy_data-1.npz  berbl-additional_literal-sparse_noisy_data-2.npz  berbl-additional_literal-sparse_noisy_data-3.npz  berbl-additional_literal-sparse_noisy_data-4.npz  berbl-additional_non_literal-generated_function-0.npz  berbl-additional_non_literal-generated_function-1.npz  berbl-additional_non_literal-generated_function-2.npz  berbl-additional_non_literal-generated_function-3.npz  berbl-additional_non_literal-generated_function-4.npz  berbl-additional_non_literal-sparse_noisy_data-0.npz  berbl-additional_non_literal-sparse_noisy_data-1.npz  berbl-additional_non_literal-sparse_noisy_data-2.npz  berbl-additional_non_literal-sparse_noisy_data-3.npz  berbl-book-sine-0.npz  (+70 more)
xcsf/: build.nix  default.nix  shell.nix
(+50 files in other folders)
