[metadata]
name = berbl-exp
version = 1.0.0
author = berbl
author_email = berbl@berbl.berbl
description = Experiment automation for BERBL
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tmp-berbl/berbl-exp
project_urls =
    Bug Tracker = https://github.com/tmp-berbl/berbl-exp/issues
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Artificial Intelligence
install_requires =
    berbl
    pandas ==1.3.4
    mlflow ==1.22.0
    numpy ==1.21.2
    scipy ==1.7.1
    xcsf ==1.1.4

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
